tests/cases/variables/ok/variables-enum-pattern-binding-trap.ari
enum MaybeI32 {
  None,
  Some(i32),
}

fn main() -> i64 {
  let Some(value) = None;
  value as i64
}
