tests/cases/variables/errors/variables-match-binding-immutable.ari
enum Maybe {
  None,
  Some(i32),
}

fn main() -> i64 {
  let item = Some(1);
  match item {
    Some(inner) => {
      inner = 2;
    }
    None => {
    }
  }
  return 0;
}
